ingressrules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "k8s.techopsjourney.site"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: two-tier-app-service
            port:
              number: 80
